Add react components and connect to redux

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <title>Thinkful React Starter</title>
 
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/index.css">
 
 <!-- Your HTML goes here -->
